--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,11 +5,9 @@
 <html>
 <head>
 	<meta charset="ISO-8859-1">
-    <title>CS Department Survey</title>
-	<script type = "text/javascript" src="http://mason.gmu.edu/~ralnitai/testaccess/jquery.js"> </script>
-	<link href="http://mason.gmu.edu/~ralnitai/testaccess/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+	<title>Survey</title>
 	<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-	<script type = "text/javascript" src="http://mason.gmu.edu/~ralnitai/zip.json"> </script>
+
 	
 	
 	
@@ -117,7 +115,7 @@
 	  var fname=getCookie("Username");
 	if (fname==null) {fname="";}
 	if (fname!="") {fname=fname;}
-	 document.writeln(fname + ", Welcome to Assignment 4</h3>" );
+	 document.writeln(fname + ", Welcome</h3>" );
 	 document.writeln( "<a href = 'javascript:wrongPerson()'> " +
 	 "Click here if you are not " + fname + "</a>" );
 
@@ -392,8 +390,8 @@ td, th {
   
   <tr> 
   	<td><p>Date of Survey:</p></td>
-  	<td><p> What did you like the most about GMU campus?</p></td>
-    <td><p> How did you become interested in GMU?</p></td>
+  	<td><p> What did you like the most about campus?</p></td>
+    <td><p> How did you become interested in school </p></td>
   
   </tr>
   
@@ -503,8 +501,8 @@ td, th {
 
 </form>
 </div>
-<div id="locator" title="Please visit http://www.gmu.edu for more information.">
-<img src="GMU.png"><br>
+<div id="locator" title="URL.">
+<img src=".png"><br>
 </div>
 
 
